--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,10 @@
 <html>
+<meta charset="utf-8">
+<link rel="stylesheet" href="css/style.css">
 <div class="noise">
+</div>
 
 <h2>Hello!</h2>
 <p>I'm optional</p>
 
-</div>
 </html>
