Final Copt of Assignment 1

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,13 @@
 <html>
-<meta charset="utf-8">
-<link rel="stylesheet" href="css/style.css">
-<div class="noise">
-</div>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/style.css">
 
-<h2>Hello!</h2>
-<p>I'm optional</p>
+
+	<div class="noise"></div>
+	<div class="shakytext"></div>
+	<div class="buttonshake"></div>
+
+<script src="js/content.js"></script>
+<script src="js/popup.js"></script>
 
 </html>
